welcome.lessons.welcome.methods.slug.SlugHunting.scala.error
SlugHunting:6: error: not found: value isFacindTrail
if(!isFacindTrail){
    ^SlugHunting:9: error: not found: value droie
	droie()
        ^