welcome.lessons.welcome.methods.slug.SlugHunting.scala.code
def hunt() {
while(isFacingTrail){
	avance()
}
if(!isFacindTrail){
	gauche();
} else {
	droie()
}
}
def isFacingTrail():Boolean = {
	if (estFaceMur){
	return false	
	}
    avance()
   var x = getCouleurSol();
    recule()
    if(x == Color.green){
    		return true
    } else { return false
    }
} 
       